Fix ModularComponent serialization in nested components